[gd_scene load_steps=2 format=3 uid="uid://yd8wdv78iscs"]

[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="1_qt3cc"]

[node name="pause_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qt3cc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -68.0
offset_right = 47.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.25285, 2.25285)
pivot_offset = Vector2(47, 68)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Save Game" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="Quit Game" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Save Game" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
